--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -13,7 +13,7 @@ jobs:
         uses: jtalk/url-health-check-action@v4
         with:
           # Check the following URLs one by one sequentially
-          url: https://full-stack-open-pokedex-34235.fly.dev/health
+          url: https://fullstackopenpart35.fly.dev/health
           # Follow redirects, or just report success on 3xx status codes
           follow-redirect: false # Optional, defaults to "false"
           # Fail this action after this many failed attempts
